// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: NameForm should render correctly 1`] = `
<form>
  <Panel.LEGACY.Section>
    <Stack>
      <Field
        autoComplete="given-name"
        component={[Function]}
        id="firstName"
        label="First Name"
        name="firstName"
        validate={[Function]}
      />
      <Field
        autoComplete="family-name"
        component={[Function]}
        id="lastName"
        label="Last Name"
        name="lastName"
        validate={[Function]}
      />
    </Stack>
  </Panel.LEGACY.Section>
  <Panel.LEGACY.Section>
    <Button
      submit={true}
      variant="primary"
    >
      Update Profile
    </Button>
  </Panel.LEGACY.Section>
</form>
`;

exports[`Component: NameForm should render correctly when updating 1`] = `
<form>
  <Panel.LEGACY.Section>
    <Stack>
      <Field
        autoComplete="given-name"
        component={[Function]}
        id="firstName"
        label="First Name"
        name="firstName"
        validate={[Function]}
      />
      <Field
        autoComplete="family-name"
        component={[Function]}
        id="lastName"
        label="Last Name"
        name="lastName"
        validate={[Function]}
      />
    </Stack>
  </Panel.LEGACY.Section>
  <Panel.LEGACY.Section>
    <Button
      disabled={true}
      submit={true}
      variant="primary"
    >
      Updating Profile
    </Button>
  </Panel.LEGACY.Section>
</form>
`;
